# ChangeLog for sys-kernel/sparc-sources
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/sparc-sources/Attic/ChangeLog,v 1.18 2003/03/20 14:56:11 joker Exp $

*sparc-sources-2.4.20-r6 (19 Mar 2003)

  20 Mar 2003; Christian Birchinger <joker@gentoo.org>
  sparc-sources-2.4.20-r6.ebuild:
  Changed KEYWORD from ~sparc to sparc

  19 Mar 2003; Christian Birchinger <joker@gentoo.org>:
  sparc-sources-2.4.20-r6.ebuild files/digest-sparc-sources-2.4.20-r6 :

  Better ptrace fix. The original one wont compile on sparc64.

*sparc-sources-2.4.20-r5 (18 Mar 2003)

  18 Mar 2003; Christian Birchinger <joker@gentoo.org>:
  sparc-sources-2.4.20-r5.ebuild files/digest-sparc-sources-2.4.20-r5 :
  
  Added 2 new patches. A fix for the ext3 corruption problem and a fix
  for the recent ptrace local security hole.
  The grsecurity version has been bumped to 1.9.9c

*sparc-sources-2.4.20-r4 (02 Mar 2003)

  11 Feb 2003; Christian Birchinger <joker@gentoo.org>:
  sparc-sources-2.4.20-r4.ebuild :

  New version with better kgcc handling for sparc32.

*sparc-sources-2.4.20-r3 (03 Feb 2003)

  03 Feb 2003; Christian Birchinger <joker@gentoo.org>:
  sparc-sources-2.4.20-r3.ebuild files/digest-sparc-sources-2.4.20-r3 :
  
  Added a sparc32 kgcc Makefile patch.

*sparc-sources-2.4.20-r2 (09 Jan 2003)

  10 Jan 2003; Christian Birchinger <joker@gentoo.org>:
  sparc-sources-2.4.20-r2.ebuild:

  Changed sparc keyword to stable. 

  09 Jan 2003; Christian Birchinger <joker@gentoo.org>:
  sparc-sources-2.4.20-r2.ebuild files/digest-sparc-sources-2.4.20-r2 :  

  Added a sparc64 netfilter patch.

*sparc-sources-2.4.20-r1 (07 Jan 2003)

  07 Jan 2003; Christian Birchinger <joker@gentoo.org>:
  sparc-sources-2.4.20-r1.ebuild files/digest-sparc-sources-2.4.20-r1 :  

  Added grsecurity 1.9.8 to patches-2.4.20-r1-sparc.tar.bz2

  17 Dec 2002; Brandon Low <lostlogic@gentoo.org>:
  Make all kernel-sources SLOT="${KV}"
